--- a/training/receipes/llama-3-1-8b-qlora.yaml
+++ b/training/receipes/llama-3-1-8b-qlora.yaml
@@ -4,16 +4,16 @@ tokenizer_name_or_path: Meta-Llama/Meta-Llama-3.1-8B-Instruct
 model_revision: main
 torch_dtype: bfloat16
 attn_implementation: flash_attention_2
-use_liger_kernels: true
+use_liger: true
 bf16: true
 tf32: true
 
 # Dataset arguments
 dataset_id_or_path: train_dataset.json
-max_seq_length: 512
+max_seq_length: 1024
 packing: true
-per_device_eval_batch_size: 1
-gradient_accumulation_steps: 4
+per_device_train_batch_size: 16
+gradient_accumulation_steps: 2
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
