--- a/training/receipes/llama-3-1-8b-qlora.yaml
+++ b/training/receipes/llama-3-1-8b-qlora.yaml
@@ -7,22 +7,16 @@ attn_implementation: flash_attention_2
 use_liger: true
 bf16: true
 tf32: true
+output_dir: data/llama-3-1-8b-math-orca-qlora-10k-ep1
 
 # Dataset arguments
 dataset_id_or_path: train_dataset.json
 max_seq_length: 1024
 packing: true
-per_device_train_batch_size: 8
-gradient_accumulation_steps: 2
-gradient_checkpointing: true
-gradient_checkpointing_kwargs:
-  use_reentrant: false
-output_dir: data/llama-3-1-8b-math-orca-qlora
 
 # LoRA arguments
 use_peft: true
 load_in_4bit: true
-merge_adapter: true
 lora_target_modules: "all-linear"
 # important as we need to train the special tokens for the chat template of llama 
 lora_modules_to_save: ["lm_head", "embed_tokens"] # you might need to change this for qwen or other models
@@ -31,6 +25,11 @@ lora_alpha: 16
 
 # Training arguments
 num_train_epochs: 1
+per_device_train_batch_size: 8
+gradient_accumulation_steps: 2
+gradient_checkpointing: true
+gradient_checkpointing_kwargs:
+  use_reentrant: false
 learning_rate: 2.0e-4 
 lr_scheduler_type: constant
 warmup_ratio: 0.1
@@ -45,5 +44,5 @@ seed: 42
 
 # Hugging Face Hub 
 push_to_hub: true
-hub_model_id: llama-3-1-8b-math-orca-qlora-10k-ep1
+# hub_model_id: llama-3-1-8b-math-orca-qlora-10k-ep1 # if not defined same as output_dir
 hub_strategy: every_save
