--- a/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
+++ b/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
@@ -1,11 +1,11 @@
 # Model arguments
-model_name_or_path: Qwen/Qwen2.5-1.5B-Instruct
+model_name_or_path: Qwen/Qwen2.5-3B-Instruct
 model_revision: main
 torch_dtype: bfloat16
 attn_implementation: flash_attention_2
 bf16: true
 tf32: true
-output_dir: runs/qwen-r1-aha-moment
+output_dir: runs/qwen-3b-r1-aha-moment
 
 # Dataset arguments
 dataset_id_or_path: Jiayi-Pan/Countdown-Tasks-3to4
@@ -20,16 +20,15 @@ gradient_accumulation_steps: 8
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 1.0e-5
+learning_rate: 1.0e-6 # as in the deepseek math paper
 lr_scheduler_type: cosine
 warmup_ratio: 0.03
 # GRPO specific parameters
-beta: 0.04
-max_prompt_length: 128
+beta: 0.04 # as in the deepseek math paper
+max_prompt_length: 256
 max_completion_length: 768
 num_generations: 8
 use_vllm: true
-vllm_device: 3
 vllm_gpu_memory_utilization: 0.5
 
 # Logging arguments
