--- a/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
+++ b/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
@@ -14,7 +14,7 @@ dataset_id_or_path: Jiayi-Pan/Countdown-Tasks-3to4
 # No LoRA is used here
 
 # Training arguments
-max_steps: 400
+max_steps: 450
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 8
 gradient_checkpointing: true
@@ -42,6 +42,6 @@ save_steps: 25
 seed: 42
 
 # Hugging Face Hub 
-push_to_hub: false
+push_to_hub: true
   # hub_model_id: llama-3-1-8b-math-orca-qlora-10k-ep1 # if not defined same as output_dir
 hub_strategy: every_save
