--- a/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
+++ b/training/receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml
@@ -5,7 +5,7 @@ torch_dtype: bfloat16
 attn_implementation: flash_attention_2
 bf16: true
 tf32: true
-output_dir: runs/qwen-3b-r1-aha-moment
+output_dir: runs/qwen-2.5-3b-r1-countdown
 
 # Dataset arguments
 dataset_id_or_path: Jiayi-Pan/Countdown-Tasks-3to4
@@ -20,16 +20,16 @@ gradient_accumulation_steps: 8
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 1.0e-6 # as in the deepseek math paper
+learning_rate: 5.0e-7 # 1.0e-6 as in the deepseek math paper 5-e7 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
 lr_scheduler_type: cosine
 warmup_ratio: 0.03
 # GRPO specific parameters
-beta: 0.04 # as in the deepseek math paper
+beta: 0.001 # 0.04 as in the deepseek math paper 0.001 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
 max_prompt_length: 256
 max_completion_length: 1024
 num_generations: 8
 use_vllm: true
-vllm_device: "cuda:3"
+# vllm_device: "cuda:3"
 vllm_gpu_memory_utilization: 0.5
 
 # Logging arguments
